# vector

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md
crates/graphics/: Cargo.toml  build.rs
crates/graphics/shaders/: quad_emit_uv.slang  rounded_rectangle_color_fill.slang  test_compute.slang
crates/graphics/shaders/common/: utils.slang  vertex_with_uv.slang
crates/graphics/shaders/compute/: test_compute.comp
crates/graphics/shaders/fragment/: rounded_rectangle_color_fill.frag
crates/graphics/shaders/vertex/: quad_emit_uv.vert
crates/graphics/src/: allocation_callbacks.rs  border_radius.rs  charset.rs  color.rs  instance.rs  lib.rs  mat3.rs  renderer.rs  size.rs  surface.rs  uv.rs  vec2.rs  vk_object_store.rs
crates/graphics/src/primitives/: mod.rs  primitive.rs  rounded_rectangle.rs
crates/graphics/src/renderer/: binding_group_layouts.rs  draw_context.rs  headless.rs  mod.rs  pipelines.rs  primitive_store.rs  surfaced.rs  target.rs  transform_uniform.rs
crates/graphics/src/renderer/primitives/: primitive.rs  rounded_rectangle.rs
crates/graphics/src/renderer/shaders/: color_target_states.rs  fragment_states.rs  fs_rounded_rectangle_color_fill.wgsl  mod.rs  shader_modules.rs  vertex_states.rs  vs_emit_quad_uv.wgsl
crates/graphics/src/renderer/uniforms/: emit_quad_uv.rs  mod.rs  projection.rs  rounded_rectangle_color_fill.rs  uniform_trait.rs
crates/graphics/src/renderers/: context.rs  mod.rs  surfaced_context.rs  ui_renderer.rs
crates/graphics/src/shaders/: mod.rs  quad_emit_uv  rectangle.wgsl  rounded_rectangle_color_fill
crates/graphics/src/spirv/: cs_test_compute.spv  fs.rs  fs_rounded_rectangle_color_fill.spv  mod.rs  shader_source.rs  vs.rs  vs_quad_emit_uv.spv
crates/graphics/src/ui_renderer/: mod.rs  renderer.rs  shaders.rs
crates/graphics/src/vk_object_store/: mod.rs  render_pipelines.rs  shader.rs
crates/logging/: Cargo.toml
crates/logging/src/: error.rs  lib.rs  panic_handler.rs
crates/shader_compile/: Cargo.toml
crates/shader_compile/src/: builder.rs  lib.rs  source_info.rs
crates/shader_include/: Cargo.toml
crates/shader_include/src/: data_type.rs  generator.rs  input.rs  layout.rs  lib.rs
crates/slang-build/: Cargo.toml  build.rs
crates/slang-build/src/: builder.rs  config.rs  lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  graphics_state.rs  lib.rs  window_state.rs
crates/utils/: Cargo.toml
crates/vector/: Cargo.toml
src/: app.rs  error.rs  graphics_state.rs  main.rs  window_state.rs
src/utils/: mod.rs  rwh.rs
(+27 files in other folders)
