[package]
name = "vector-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
native-dialog = { workspace = true }
rwh_05 = { workspace = true }
rwh_06 = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }
wgpu = { workspace = true }

utils = { package = "vector-utils", path = "../utils", features = ["rwh"] }
graphics = { package = "vector-graphics", path = "../graphics" }
logging = { package = "vector-logging", path = "../logging" }
