[package]
name = "vector-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
native-dialog = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }

utils = { package = "vector-utils", path = "../utils" }
graphics = { package = "vector-graphics", path = "../graphics" }
logging = { package = "vector-logging", path = "../logging" }
